# hit_to_skip

./: Cargo.toml  rustc_version
ardu/: ardu.ino
migrations/20170212021740_tracks/: up.sql
migrations/20170212025328_ranks/: down.sql  up.sql
migrations/20170212030235_users/: up.sql
migrations/20170212042908_ranks/: up.sql
migrations/20170212045539_ranks/: up.sql
src/: lib.rs  main.rs  models.rs
