[package]
name = "spoop"
version = "0.1.0"
authors = ["Emīls Piņķis <pinkisemils@gmail.com>"]

[dependencies]
walkdir = "1.0.7"
mpv = "0.2.3"
taglib = "0.2.0"
diesel = { version = "0.10.0", features = ["postgres"]  }
diesel_codegen = { version = "0.10.0", features = ["postgres"]  }
dotenv = "0.8.0"
clap = "2.20.1"
